--- a/playground/testtorch.ipynb
+++ b/playground/testtorch.ipynb
@@ -80,6 +80,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = 6 or 5\n",
+    "q"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -101,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "architecture",
+   "display_name": "Architecture",
    "language": "python",
    "name": "python3"
   },
@@ -115,12 +136,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:29:02) \n[Clang 14.0.6 ]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6ec3b71fd431e5b2d2a583f25388c230eb5b07c1fba6c86db3d23d6edcddca5d"
+    "hash": "bc0463c7f0c5c8adab7e28463401e21e8bd8fc552e2533e6cb2e652096e72c05"
    }
   }
  },
