[ADD] change to raw file using test.py

--- a/notebooks/test_shape.ipynb
+++ b/notebooks/test_shape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,6 @@
     "import cv2\n",
     "import sys\n",
     "sys.path.append(\"../\")\n",
-    "from data_file.CBCT_preprocess import read_raw\n",
     "import matplotlib.pyplot as plt\n",
     "import SimpleITK as sitk\n",
     "\n",
@@ -22,7 +21,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'CBCT_preprocess'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdata_file\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m save_to_raw\n",
+      "File \u001b[0;32m~/These/medical_project/artefacts/notebooks/../data_file/__init__.py:9\u001b[0m\n\u001b[1;32m      5\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mos\u001b[39m.\u001b[39mgetcwd()\u001b[39m}\u001b[39;00m\u001b[39m/data_file/\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m CBCT_preprocess\n\u001b[0;32m----> 9\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m processing\n\u001b[1;32m     10\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m common_utils\n\u001b[1;32m     11\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m utils\n",
+      "File \u001b[0;32m~/These/medical_project/artefacts/notebooks/../data_file/processing.py:7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel_selection\u001b[39;00m \u001b[39mimport\u001b[39;00m train_test_split\n\u001b[0;32m----> 7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mCBCT_preprocess\u001b[39;00m \u001b[39mimport\u001b[39;00m read_raw\n\u001b[1;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mvisualize\u001b[39;00m \u001b[39mimport\u001b[39;00m visualize_from_dataset\n\u001b[1;32m      9\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mh5py\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'CBCT_preprocess'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from data_file.utils import save_to_raw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fdfe81f5070>"
+       "<matplotlib.image.AxesImage at 0x7f28c80e18e0>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -62,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +100,7 @@
        "       [  9,  15,  18, ...,  56,  56,  27]], dtype=uint8)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,16 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fdfe93fe0d0>"
+       "<matplotlib.image.AxesImage at 0x7f28c7e7a2e0>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -118,46 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted.tofile(\"test.raw\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(400, 400)"
+       "<matplotlib.image.AxesImage at 0x7f28c7e71160>"
       ]
      },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test = read_raw(\"IE1705794_P406.i180483.raw\",(400,400), big_endian= True)\n",
-    "test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fdf93b78670>"
-      ]
-     },
-     "execution_count": 131,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -173,81 +166,23 @@
     }
    ],
    "source": [
+    "test = read_raw(\"IE1705794_P406.i180483.raw\",(400,400), big_endian= True)\n",
+    "test.shape\n",
     "plt.imshow(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def write_raw(array, file_name, image_size=(400, 400), sitk_pixel_type=sitk.sitkUInt16, image_spacing=None, image_origin=None, big_endian=True, umin=137, umax=52578):\n",
-    "    # Scale array back to the original range\n",
-    "    array = (array * (umax - umin)) + umin\n",
-    "    array = array.astype(np.uint16)  # convert back to uint16 (based on sitk_pixel_type)\n",
-    "    \n",
-    "    # Write raw file\n",
-    "    with open(file_name + '.raw', 'wb') as f:\n",
-    "        f.write(array.tobytes())\n",
-    "    \n",
-    "    # Convert numpy array to sitk image\n",
-    "    img = sitk.GetImageFromArray(array)\n",
-    "    img.SetSpacing(image_spacing if image_spacing else [1]*len(image_size))\n",
-    "    img.SetOrigin(image_origin if image_origin else [0]*len(image_size))\n",
-    "\n",
-    "    # Prepare metadata dictionary\n",
-    "    meta_dict = {\n",
-    "        'NDims': str(len(image_size)),\n",
-    "        'DimSize': ' '.join(map(str, image_size)),\n",
-    "        'ElementType': 'MET_USHORT',\n",
-    "        'BinaryDataByteOrderMSB': 'False' if big_endian else 'True',\n",
-    "        'ElementSpacing': ' '.join(map(str, img.GetSpacing())),\n",
-    "        'Offset': ' '.join(map(str, img.GetOrigin())),\n",
-    "        'ElementDataFile': os.path.basename(file_name) + '.raw',\n",
-    "    }\n",
-    "\n",
-    "    # Add metadata to the image\n",
-    "    for k, v in meta_dict.items():\n",
-    "        img.SetMetaData(k, v)\n",
-    "\n",
-    "    # Use ImageFileWriter to write the image\n",
-    "    writer = sitk.ImageFileWriter()\n",
-    "    writer.SetFileName(file_name + '.mhd')\n",
-    "    writer.SetUseCompression(False)\n",
-    "    writer.Execute(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_raw(test,\"my_image\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = read_raw(\"my_image.raw\", big_endian= False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fdf939ee0a0>"
+       "<matplotlib.image.AxesImage at 0x7f28c6385a90>"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -263,7 +198,98 @@
     }
    ],
    "source": [
+    "write_raw(test,\"my_image\", big_endian= False)\n",
+    "t = read_raw(\"my_image.raw\", big_endian= False)\n",
     "plt.imshow(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_raw(array,\n",
+    "             file_name, \n",
+    "             image_size=(400, 400), \n",
+    "             sitk_pixel_type=sitk.sitkUInt16, \n",
+    "             image_spacing=None, \n",
+    "             image_origin=None, \n",
+    "             big_endian=True, \n",
+    "             umin=137, \n",
+    "             umax=52578):\n",
+    "\n",
+    "\n",
+    "    # Scale array back to the original range\n",
+    "    array = (array * (umax - umin)) + umin\n",
+    "    array = array.astype(np.uint16)  # convert back to uint16 (based on sitk_pixel_type)\n",
+    "\n",
+    "    # Write raw file\n",
+    "    with open(file_name + '.raw', 'wb') as f:\n",
+    "        if big_endian:\n",
+    "            f.write(array.astype('>u2').tobytes())\n",
+    "        else:\n",
+    "            f.write(array.astype('<u2').tobytes())\n",
+    "    \n",
+    "    # Convert numpy array to sitk image\n",
+    "    img = sitk.GetImageFromArray(array)\n",
+    "    img.SetSpacing(image_spacing if image_spacing else [1]*len(image_size))\n",
+    "    img.SetOrigin(image_origin if image_origin else [0]*len(image_size))\n",
+    "\n",
+    "    # Prepare metadata dictionary\n",
+    "    meta_dict = {\n",
+    "        'NDims': str(len(image_size)),\n",
+    "        'DimSize': ' '.join(map(str, image_size)),\n",
+    "        'ElementType': 'MET_USHORT',\n",
+    "        'BinaryDataByteOrderMSB': 'True' if big_endian else 'False',\n",
+    "        'ElementSpacing': ' '.join(map(str, img.GetSpacing())),\n",
+    "        'Offset': ' '.join(map(str, img.GetOrigin())),\n",
+    "        'ElementDataFile': os.path.basename(file_name) + '.raw',\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def save_to_raw(\n",
+    "    x,\n",
+    "    preds,\n",
+    "    y,\n",
+    "    name,\n",
+    "    path=\"generated_images/\",\n",
+    "):\n",
+    "    if not os.path.exists(path + name):\n",
+    "        os.makedirs(path + name)\n",
+    " \n",
+    "    write_raw(\n",
+    "       array= x,\n",
+    "       file_name = path + name + \"_original\",\n",
+    "       image_size=(512,512)\n",
+    "   )\n",
+    "    \n",
+    "    write_raw(\n",
+    "       array= preds,\n",
+    "       file_name = path + name + \"_predicted\",\n",
+    "       image_size=(512,512)\n",
+    "   )\n",
+    "    write_raw(\n",
+    "       array= y,\n",
+    "       file_name = path + name + \"_ground_truth\",\n",
+    "       image_size=(512,512)\n",
+    "   )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_to_raw(t,t,t,\"big_endian/acqusiition\")"
    ]
   }
  ],
