--- a/notebooks/test_shape.ipynb
+++ b/notebooks/test_shape.ipynb
@@ -291,6 +291,26 @@
    "source": [
     "save_to_raw(t,t,t,\"big_endian/acqusiition\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(400, 400)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.shape"
+   ]
   }
  ],
  "metadata": {
