--- a/notebooks/test_shape.ipynb
+++ b/notebooks/test_shape.ipynb
@@ -488,7 +488,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "las",
+   "display_name": "artefact",
    "language": "python",
    "name": "python3"
   },
@@ -502,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4
  },
